# ScratchNet

./: .gitignore  CMakeLists.txt  README.md  kmeans  knn  mnistLoader  mnistTest  results.txt  scratchnet
apps/: CMakeLists.txt  dnn  dnn.cpp
data/: XOR_dataGenerator.cpp  XOR_train.txt
include/: common.hpp  layer.hpp  matrix.hpp  network.hpp  neuron.hpp
include/KMeans/: kmeans.hpp
include/KNN/: knn.hpp
include/MNIST/: mnist_data.hpp  mnist_data_handler.hpp
include/data_processing/MNIST/: common.hpp
include/data_processing/XOR/: XOR_preprocessor.hpp  preprocessor.hpp
include/math/: linearalgebra.h  linearalgebra.hpp  matrix.h  matrix.hpp  numerical.hpp
include/ml_models/DNN/: layer.hpp  network.hpp  neuron.hpp  parameters.hpp
include/ml_models/KNN/: knn.hpp
include/utils/: linearalgebra.hpp  matrixalgebra.hpp  multiplymatrices.hpp  multiplymatrix.hpp  preprocessor.hpp
src/: CMakeLists.txt  common.cpp  layer.cpp  linearalgebra.cpp  main.cpp  matrix.cpp  matrixalgebra.cpp  multiplymatrices.cpp  multiplymatrix.cpp  network.cpp  neuron.cpp
src/KMeans/: kmeans.cpp  kmeans_main.cpp
src/KNN/: knn.cpp
src/MNIST/: mnist_data.cpp  mnist_data_handler.cpp  mnist_main.cpp
src/data_processing/: CMakeLists.txt
src/data_processing/MNIST/: common.cpp  mnist_data.cpp  mnist_data_handler.cpp
src/data_processing/XOR/: XOR_preprocessor.cpp  preprocessor.cpp
src/math/: CMakeLists.txt  numerical.cpp
src/ml_models/: CMakeLists.txt
src/ml_models/DNN/: CMakeLists.txt  layer.cpp  network.cpp  neuron.cpp
src/ml_models/KNN/: knn.cpp  knn_main.cpp
src/tests/: test_linearalgebra.cpp  test_preprocessor.cpp
src/utils/: linearalgebra.cpp  preprocessor.cpp
tests/: CMakeLists.txt  test_XORpreprocessor  test_XORpreprocessor.cpp  test_linearalgebra  test_linearalgebra.cpp
